This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance.
============================================================================
11/13/18: Fixed SkipAdvancedScripting to work with STEM.

11/12/18: Made it not change slit width when slit is out.

11/8/18: Fixed handling of focus in Low Dose on probe mode changes and going
in and out of LM.

11/8/18: Added delay in checking JEOL neutral values to prevent false alarms.

11/8/18: Fixed default to be that plugin cameras cannot return processed
images.

11/8/18: Added property to switch low dose areas at zero image shift.

11/8/18: Fixed averaging of dark references, broken 8/3/18.

11/5/18: Added optional maximum beam shift to AutocenterBeam and
CenterBeamFromImage commands.

11/5/18: Enabled post-actions for Falcon and DE cameras when aligning frames
in SerialEM so tilting can be done before aligning.

11/4/18: Added button to clear out filter adjustment from previous session.

11/4/18: Added script command to move phase plate to next position on JEOL,
and changed aperture and phase plate movement to be done with a thread.

11/4/18: Got size restrictions on frame alignment sets working correctly for
K3.  Allowed post-actions with K3 if StartupDelay is at least 0.5.

11/4/18: Fixed handling of probe mode and defocus/beam changes, broken 10.21.

10/29/18: Added focus, stage, and screen control to scope control panel.

10/29/18: Images from a Dumb Falcon 3 (no advanced scripting) are scaled by
exposure time.

10/29/18: Inverted direction of focus and Z height changes on Hitachi because
tilting is around the Y, not the X, axis.

10/21/18: Allowed continuous mode to be used for mag IS offset calibration and
enabled everything but mag button in scope control panel during this cal.

10/21/18: In continuous mode, enabled scope control panel during and made it