@@ -19,7 +19,7 @@ public:
 	CString EntryListToString(int type, int precision, int numVals, int *iVals, double *dVals);
 	void WriteShortTermCal(CString strFileName);
 	int ReadShortTermCal(CString strFileName, BOOL ignoreCals);
-	void WritePlacement(char *string, int open, WINDOWPLACEMENT *place);
+	void WritePlacement(const char *string, int open, WINDOWPLACEMENT *place);
   int ParseString(CString strLine, CString *strItems, int maxItems);
   void WriteCalibration(CString strFile);
   int ReadCalibration(CString strFileName);
