@@ -1855,6 +1855,8 @@
 #define ID_FOCUSTUNING_COMAVS           33303
 #define ID_MONTAGINGGRIDS_SHOWWHOLEAREAFORALLPOINTS 33304
 #define ID_MONTAGINGGRIDS_ADDGRIDLIKELASTONE 33305
+#define ID_SCRIPT_OPENEDITORSONSTART    33306
+#define ID_SETTINGS_DISCARDONEXIT       33307
 
 // Next default values for new objects
 // 
@@ -1862,7 +1864,7 @@
 #ifndef APSTUDIO_READONLY_SYMBOLS
 #define _APS_3D_CONTROLS                     1
 #define _APS_NEXT_RESOURCE_VALUE        228
-#define _APS_NEXT_COMMAND_VALUE         33306
+#define _APS_NEXT_COMMAND_VALUE         33308
 #define _APS_NEXT_CONTROL_VALUE         2461
 #define _APS_NEXT_SYMED_VALUE           104
 #endif
